manifests/utilities/deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  selector:
    matchLabels:
      app: deluge
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
      - image: linuxserver/deluge:latest
        name: deluge
        readinessProbe:
          httpGet:
            path: /
            port: 8112
          initialDelaySeconds: 5
        volumeMounts:
        - mountPath: /config
          name: deluge-config
        - mountPath: /downloads
          name: deluge-download
      volumes:
      - name: deluge-config
        persistentVolumeClaim:
          claimName: deluge-config
      - name: deluge-download
        persistentVolumeClaim:
          claimName: deluge-download
