manifests/utilities/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
spec:
  selector:
    app: deluge
  ports:
  - protocol: TCP
    name: http
    port: 8112
