manifests/utilities/deluge/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deluge
spec:
  rules:
  - host: deluge.homelab
    http:
      paths:
      - backend:
          serviceName: deluge
          servicePort: 8112
        path: /
